--- a/task1/P1 register.html
+++ b/task1/P1 register.html
@@ -139,7 +139,7 @@
     <p>为了阅读评论时得知您的身份</p>
     <p>请先注册</p>
     <div>当然，您也可以跳过此步骤，以游客身份浏览</div>
-    <a href="index.html">跳过</a>
+    <a href="../index.html">跳过</a>
   </div>
   <div class="enroll">
     <form action="#">
