--- a/task1/P2 log.html
+++ b/task1/P2 log.html
@@ -401,7 +401,7 @@
       for (let i = 0; i < persons.length; i++) {
         if (persons[i].phone === phone.value) {
           localStorage.setItem(`current user of zu-zi'space`, JSON.stringify(persons[i]))
-          location.href = "index.html"
+          location.href = "../index.html"
           return
         }
       }
