--- a/task1/P6 Photo wall1.html
+++ b/task1/P6 Photo wall1.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>zu-zi的照片墙2</title>
+  <title>zu-zi的照片墙</title>
   <style>
     * {
       padding: 0;
@@ -145,7 +145,7 @@
           <!-- <a href="#" >2</a> -->
         </li>
         <li class="choice">
-          <a href="index.html">回到首页</a>
+          <a href="../index.html">回到首页</a>
         </li>
         <li class="choice">
           <a href="P4 Self-introduction.html">自我介绍</a>
@@ -170,29 +170,29 @@
   <div>
     <div class="photoes">
       <ul>
-        <li style="background-image: url(招新images/wall6.jpg);">
+        <li style="background-image: url(招新images/wall5.jpg);">
           <div class="black">
-            <p>这个微积分学的我脑壳疼</p>
+            <p>吃完啦！</p>
           </div>
         </li>
-        <li style="background-image: url(招新images/wall7.jpg);">
+        <li style="background-image: url(招新images/wall4.jpg);">
           <div class="black">
-            <p>这是我才来报道时拍的！好看，喜欢</p>
+            <p>这是我最喜欢的食堂的三个菜，集齐啦，好幸福呜呜</p>
           </div>
         </li>
-        <li style="background-image: url(招新images/wall8.jpg);">
+        <li style="background-image: url(招新images/wall3.jpg);">
           <div class="black">
-            <p>抢到了哈哈哈哈哈哈哈哈哈哈哈</p>
+            <p>但是之后又去啦，我们还点了炸鸡嘻嘻</p>
           </div>
         </li>
-        <li style="background-image: url(招新images/wall9.jpg);">
+        <li style="background-image: url(招新images/wall2.jpg);">
           <div class="black">
-            <p>看我上心理课！但是这个图片比例。</p>
-          </div>>
+            <p>在新疆室友的推荐下去吃炒年糕，辣死嘞</p>
+          </div>
         </li>
-        <li class="active" style="background-image: url(招新images/wall10.jpg); position: absolute; right:0;">
+        <li class="active" style="background-image: url(招新images/wall1.jpg); position: absolute; right:0;">
           <div class="black">
-            <p>有一天下课拍的，好喜欢阳光</p>
+            <p>暑假用我做家教争的钱请吃饭哩</p>
           </div>
         </li>
       </ul>
@@ -233,7 +233,7 @@
         this.classList.add(`active`)
       })
       // lis[i].addEventListener(`click`, function () {
-      //   location.href = `P3 index.html`
+      //   location.href = `P4 Self-introduction.html`
       // })
     }
   </script>
