--- a/task1/P6 Photo wall3.html
+++ b/task1/P6 Photo wall3.html
@@ -145,7 +145,7 @@
           <!-- <a href="#" >2</a> -->
         </li>
         <li class="choice">
-          <a href="index.html">回到首页</a>
+          <a href="../index.html">回到首页</a>
         </li>
         <li class="choice">
           <a href="P4 Self-introduction.html">自我介绍</a>
