--- a/task1/P7 Articles Sharing.html
+++ b/task1/P7 Articles Sharing.html
@@ -262,7 +262,7 @@
           <!-- <a href="#" >2</a> -->
         </li>
         <li class="choice">
-          <a href="index.html">回到首页</a>
+          <a href="../index.html">回到首页</a>
           <ul class="header-droplist">
             <li><a href="#">我是下拉</a></li>
             <li><a href="#">我是下拉</a></li>
