--- a/index.html
+++ b/index.html
@@ -251,8 +251,14 @@
       cursor: pointer;
     }
 
+
+    .box4 ul li a {
+      position: absolute;
+      bottom: -220px;
+      right: 130px;
+    }
+
     .box4 ul li:hover {
-      /* color: #f28181; */
       font-style: italic;
       font-size: 25px;
     }
@@ -524,7 +530,7 @@
       <p style="position: absolute;top:320px;left:390px;font-size: 30px;text-decoration:underline;">现在是：前端时期</p>
       <p style="position: absolute;bottom:100px;right:0;font-size: 20px;">
         >浏览说明：<br>展示出来的板块都是可以用的，除了头部导航栏的下拉列表<br>（因为我还没想好写什么，以后再加吧）</p>
-      <p style="position: absolute;bottom:60px;right:80px;font-size: 20px;">会有很多隐藏模块和功能哦，请开始尽情探索吧!!</p>
+      <p style="position: absolute;bottom:60px;right:275px;font-size: 20px;">现在，请开始尽情探索吧!!</p>
     </div>
     <div class="box2" id="box">
       <h2>自我介绍:</h2>
@@ -560,10 +566,12 @@
     <div class="box4" id="box">
       <h2>是照片墙：</h2>
       <ul>
-        <li style="top:80px;left:130px; background-image: url(招新images/wall21.jpg);">我喜欢的</li>
-        <li style="top:80px;right:130px; background-image: url(招新images/wall22.jpg);">学校生活</li>
-        <li style="bottom: 80px;left:130px; background-color: rgba(0, 0, 0, .4);">我的心头好耶</li>
-        <li style="bottom: 80px;right:130px; background-image: url(招新images/wall24.jpg)">一些学习上的</li>
+        <li style="top:80px;left:130px; background-image: url(task1/招新images/wall21.jpg);"><a href="#">我喜欢的</a></li>
+        <li style="top:80px;right:130px; background-image: url(task1/招新images/wall22.jpg);"><a href="#">学校生活</a></li>
+        <li style="bottom: 80px;left:130px;  background-image: url(task1/招新images/wall23.jpg);"><a href="#">我的心头好耶</a>
+        </li>
+        <li style="bottom: 80px;right:130px; background-image: url(task1/招新images/wall24.jpg);"><a href="#">一些学习上的</a>
+        </li>
       </ul>
     </div>
     <div class="box5" id="box">
