--- a/index.html
+++ b/index.html
@@ -499,10 +499,10 @@
         <li class="choice">
           <a href="task1/P6 Photo wall1.html">是照片墙</a>
           <ul class="droplist">
-            <li><a href="P6 Photo wall1.html">我喜欢的</a></li>
-            <li><a href="P6 Photo wall2.html">学校生活</a></li>
-            <li><a href="P6 Photo wall3.html">我的心头好</a></li>
-            <li><a href="P6 Photo wall4.html">关于学习</a></li>
+            <li><a href="task1/P6 Photo wall1.html">我喜欢的</a></li>
+            <li><a href="task1/P6 Photo wall2.html">学校生活</a></li>
+            <li><a href="task1/P6 Photo wall3.html">我的心头好</a></li>
+            <li><a href="task1/P6 Photo wall4.html">关于学习</a></li>
           </ul>
         </li>
         <li class="choice">
