--- a/task1/P1 register.html
+++ b/task1/P1 register.html
@@ -24,7 +24,7 @@
       margin: 0 auto; */
       width: 100%;
       min-width: 1400px;
-      background: url(招新images/7.jpg) no-repeat fixed center;
+      background: url(images/7.jpg) no-repeat fixed center;
       /* background-size: 100%; */
       background-size: 1800px 1000px;
       font-family: serif;
@@ -80,12 +80,14 @@
       /* right: 0; */
       width: 55%;
       height: 500px;
+
     }
 
     .enroll form {
       position: absolute;
       top: 200px;
       right: 70px;
+      /* background-color: #fff; */
       /* margin-right: -400px; */
       width: 500px;
     }
