--- a/task1/P7 Articles Sharing.html
+++ b/task1/P7 Articles Sharing.html
@@ -17,11 +17,9 @@
 
     body {
       width: 100%;
-      height: 3000px;
-      /*暂定*/
+      height: 2700px;
       min-width: 1600px;
-      background: url(招新images/1.jpg) no-repeat fixed center;
-      /* background-size: 100%; */
+      background: url(images/9.jpg) no-repeat fixed center;
       background-size: 1700px 900px;
       font-family: serif;
       scroll-behavior: smooth;
@@ -32,7 +30,7 @@
       position: fixed;
       /* overflow: hidden; */
       top: 0;
-      height: 42px;
+      height: 50px;
       width: 100%;
       min-width: 1600px;
       z-index: 1;
@@ -46,8 +44,8 @@
     .logo {
       float: left;
       margin: 0 100px 0 100px;
-      height: 42px;
-      line-height: 42px;
+      height: 50px;
+      line-height: 50px;
       font-weight: 800;
       font-size: 20px;
     }
@@ -55,13 +53,13 @@
     .nav {
       float: left;
       margin: 0 100px;
-      height: 42px;
+      height: 50px;
     }
 
     .choice {
       float: left;
       width: 90px;
-      line-height: 42px;
+      line-height: 50px;
       text-align: center;
     }
 
@@ -92,28 +90,29 @@
       display: block;
     }
 
+
     .user {
-      float: left;
-      margin-left: 200px;
-      height: 42px;
-
+      float: right;
+      height: 50px;
+      margin-right: 5%;
     }
 
-    .photo {
-      float: left;
-      background-image: url(招新images/15.jpg);
+    .user .photo {
+      float: right;
+      /* background-image: url(task1/images/wdtx.avif); */
       background-size: 100%;
-      height: 36px;
-      width: 36px;
-      margin-top: 3px;
-      border-radius: 18px;
+      height: 40px;
+      width: 40px;
+      margin-top: 5px;
+      border-radius: 20px;
     }
 
-    .uname {
-      float: left;
-      margin-left: 20px;
-      font-size: 20px;
-      line-height: 42px;
+    .user .uname {
+      float: right;
+      margin-right: 20px;
+      font-size: 24px;
+      line-height: 50px;
+      color: #fff;
     }
 
     /*页面主体部分*/
@@ -146,6 +145,7 @@
       font: italic 20px serif;
       border-radius: 20px;
       border: 0;
+      color: #000;
       background-color: rgba(255, 255, 255, 0.7);
       /* background: url(招新images/20.png) right no-repeat;
       background-size: 10px 10px; */
@@ -164,6 +164,7 @@
       right: 4px;
       width: 50px;
       background-color: #675b5b;
+      cursor: pointer;
     }
 
     .show {
@@ -186,7 +187,7 @@
       border-top: 0;
       border-bottom: 0;
       border-radius: 7px;
-      background-color: #a29a9a;
+      background-color: rgba(0, 0, 0, 0.7);
       /* display: none; */
       transition: all .3s;
       opacity: 0;
@@ -202,11 +203,11 @@
       line-height: 40px;
       font-size: 19px;
       font-style: italic;
-      color: #000;
+      color: #fff;
     }
 
     .droplist li a:hover {
-      color: #fff;
+      background-color: #4c4c4c;
     }
 
     table {
@@ -233,10 +234,12 @@
       height: 70px;
       line-height: 70px;
       font-size: 20px;
+
     }
 
     td {
       border-bottom: 1px solid #675b5b;
+      cursor: pointer;
     }
 
     .hidden {
@@ -244,8 +247,7 @@
     }
 
     .hover {
-      background-color: #666;
-      color: #fff;
+      background-color: #474444;
     }
   </style>
 </head>
@@ -291,9 +293,9 @@
         <li class="choice">
           <a href="P6 Photo wall1.html">是照片墙</a>
           <ul class="header-droplist">
-            <li><a href="P6 Photo wall1.html">我喜欢的</a></li>
+            <li><a href="P6 Photo wall1.html">关于吃的</a></li>
             <li><a href="P6 Photo wall2.html">学校生活</a></li>
-            <li><a href="P6 Photo wall3.html">我的心头好</a></li>
+            <li><a href="P6 Photo wall3.html">我喜欢的</a></li>
             <li><a href="P6 Photo wall4.html">关于学习</a></li>
           </ul>
         </li>
@@ -465,31 +467,38 @@
     </table>
   </div>
   <script>
-    alert(`这个板块本来是用来记录我的大学生活和博客的？但是为了有足够的篇幅来展示搜索功能，
-    这里添加了此次做题期间我的CSDN的收藏文章，之后会删掉`)
+    // alert(`这个板块本来是用来记录我的大学生活和博客的？但是为了有足够的篇幅来展示搜索功能，
+    // 这里添加了此次做题期间我的CSDN的收藏文章，之后会删掉`)
 
-    //一、调用当前登录账户+P123的切换
+    //调用当前登录账户+P123的切换
     const li1 = document.querySelector(`[data-id="1"]`)
     const li2 = document.querySelector(`[data-id="2"]`)
-    const uname = document.querySelector(`.header .uname`)
-    function render() {
+    const headeruname = document.querySelector(`.header .uname`)
+    function renderheader() {
       const currentuser = JSON.parse(localStorage.getItem(`current user of zu-zi'space`))//!!!:||{}不行
       if (currentuser) {
-        uname.innerHTML = currentuser.username
+        headeruname.innerHTML = currentuser.username
+        if (currentuser.username === `zu-zi`) {
+          document.querySelector(`.user .photo`).style.backgroundImage = `url(images/tx.jpg)`
+        }
+        else {
+          document.querySelector(`.user .photo`).style.backgroundImage = `url(images/wdtx.avif)`
+        }
         li1.innerHTML = `<a href="javascript:;">：${currentuser.username}</a>`
         li2.innerHTML = `<a href="javascript:;">退出登录</a>`
       }
       else {
-        uname.innerHTML = `游客123`
+        headeruname.innerHTML = `游客123`
+        document.querySelector(`.user .photo`).style.backgroundImage = `url(images/wdtx.avif)`
         li1.innerHTML = `<a href="P2 log.html" >请先登录</a>`
         li2.innerHTML = `<a href="P1 register.html" >点击注册</a>`
       }
     }
-    render()
+    renderheader()
     if (li2.innerHTML === `<a href="javascript:;">退出登录</a>`)
       li2.addEventListener(`click`, function () {
         localStorage.removeItem(`current user of zu-zi'space`)
-        render()
+        renderheader()
       })
 
     //显示时间
